# crete-upgrade

./: CMakeLists.txt  README.md
back-end/: CMakeLists.txt
back-end/klee-1.4.0/: .gitignore  Makefile.common
back-end/klee-1.4.0/include/crete-replayer/: crete_debug.h  qemu_rt_info.h
back-end/klee-1.4.0/include/klee/: Constraints.h  ExecutionState.h  Interpreter.h
back-end/klee-1.4.0/include/klee/Internal/ADT/: KTest.h
back-end/klee-1.4.0/include/klee/util/: Assignment.h
back-end/klee-1.4.0/lib/: CMakeLists.txt
back-end/klee-1.4.0/lib/Basic/: KTest.cpp
back-end/klee-1.4.0/lib/Core/: AddressSpace.cpp  AddressSpace.h  ExecutionState.cpp  Executor.cpp  Executor.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp
back-end/klee-1.4.0/lib/Expr/: Constraints.cpp
back-end/klee-1.4.0/lib/Module/: KModule.cpp
back-end/klee-1.4.0/lib/Solver/: CoreSolver.cpp
back-end/klee-1.4.0/lib/crete-replayer/: CMakeLists.txt  qemu_rt_info.cpp
back-end/klee-1.4.0/tools/klee/: CMakeLists.txt  Makefile  main.cpp
back-end/klee-2.1/: CMakeLists.txt  build.sh
back-end/klee-2.1/include/crete-replayer/: qemu_rt_info.h
back-end/klee-2.1/include/klee/: ExecutionState.h  Interpreter.h
back-end/klee-2.1/include/klee/Config/: config.h.cmin
back-end/klee-2.1/include/klee/Expr/: Assignment.h  Constraints.h
back-end/klee-2.1/include/klee/Internal/ADT/: KTest.h
back-end/klee-2.1/lib/: CMakeLists.txt
back-end/klee-2.1/lib/Basic/: KTest.cpp
back-end/klee-2.1/lib/Core/: AddressSpace.cpp  AddressSpace.h  ExecutionState.cpp  Executor.cpp  Executor.h  Memory.cpp  Memory.h  MemoryManager.cpp  MemoryManager.h  SpecialFunctionHandler.cpp  SpecialFunctionHandler.h  StatsTracker.cpp  TimingSolver.cpp
back-end/klee-2.1/lib/Expr/: Constraints.cpp
back-end/klee-2.1/lib/Module/: KModule.cpp
back-end/klee-2.1/lib/Solver/: CoreSolver.cpp
back-end/klee-2.1/lib/crete-replayer/: CMakeLists.txt  Makefile
back-end/klee-2.1/tools/klee/: CMakeLists.txt  main.cpp
back-end/llvm-translator/: CMakeLists.txt
back-end/llvm-translator/llvm-translator-qemu-3.0/: bc_crete_ops.bc  bc_crete_ops_lli.bc  configure  make_op_helper_bc.sh
back-end/llvm-translator/llvm-translator-qemu-3.0/qemu-include/: cpu-common.h  qemu-common.h
back-end/llvm-translator/llvm-translator-qemu-3.0/tcg/: tcg-llvm.cpp  tcg-llvm.h  tcg.c  tcg.h
back-end/llvm-translator/llvm-translator-qemu-3.0/tcg-llvm-offline/: tcg-llvm-offline.cpp  tcg-llvm-offline.h
back-end/manager/dispatch/: CMakeLists.txt
back-end/manager/svm-node/: CMakeLists.txt
back-end/manager/vm-node/: CMakeLists.txt
front-end/: CMakeLists.txt
front-end/guest/: CRETE-VERSION
front-end/qemu-3.0/: configure  tcg-llvm-offline
front-end/qemu-3.0/hw/9pfs/: virtio-9p.c
front-end/qemu-3.0/qga/: commands-posix.c
front-end/qemu-3.0/runtime-dump/: crete-debug.cpp  runtime-dump.cpp  tci_analyzer.cpp
lib/boost/: CMakeLists.txt
lib/include/boost/process/: operations.hpp  process.hpp  self.hpp
lib/include/boost/process/detail/: posix_ops.hpp
lib/include/crete/: common.h
lib/stp/: CMakeLists.txt
misc/scripts/replay/: dispatch_coverage_coreutils.sh
misc/util/config-generator/: CMakeLists.txt
misc/util/tc-compare/: CMakeLists.txt
misc/util/tc-replay/: CMakeLists.txt
